# misa-md-hip

./: .gitignore  CMakeLists.txt  HIP_POTENTIAL_VERSION.txt  MISA_MD_VERSION.txt  README.md  config.cmake  hip_arch_acc_imp.cpp  hip_kernels.h  hip_kernels.hip.cpp  kernel_wrapper.h  kernel_wrapper.hip.cpp  md_hip_config.h
scripts/: hipcc-wrapper-nv.sh  hipcc-wrapper-rocm.sh  hipcc-wrapper.sh
src/: CMakeLists.txt  cli.cpp  cli.h  configure.cmake  double_buffer.cpp  double_buffer.h  global_ops.cpp  global_ops.h  hip_arch_acc_imp.cpp  hip_kernels.hip.cpp  kernel_itl.hpp  kernel_pairs.hpp  kernel_types.h  kernel_wrapper.h  kernel_wrapper.hip.cpp  md_hip_building_config.h.in  md_hip_config.h  mem.cpp  optimization_level.h  rho_double_buffer_imp.cpp  rho_double_buffer_imp.h
src/double-buffer/: bitmap_double_buffer_imp.cpp  bitmap_double_buffer_imp.h  df_double_buffer_imp.cpp  df_double_buffer_imp.h  double_buffer.cpp  double_buffer.h  double_buffer_base_imp.hpp  force_double_buffer_imp.cpp  force_double_buffer_imp.h  rho_double_buffer_imp.cpp  rho_double_buffer_imp.h
src/kernels/: aos_eam_pair.hpp  atom_index.hpp  hip_kernel_types.h  hip_kernels.h  hip_kernels.hip.cpp  kernel_itl.hpp  kernel_pairs.hpp  soa_block_atom.inl  soa_eam_pair.hpp  soa_thread_atom.cpp  soa_thread_atom.h  soa_wf_atom.cpp  soa_wf_atom.h
src/kernels/aos-thread-atom/: kernel_itl.hpp
src/kernels/bitmap/: bitmap_soa_thread_atom.cpp  bitmap_soa_thread_atom.h
src/kernels/common/: bitmap.hpp  reduce.hpp  utils.h
src/kernels/soa-block-atom/: soa_block_atom.hpp  soa_block_atom.inl
src/kernels/soa-thread-atom/: soa_thread_atom.cpp  soa_thread_atom.h
src/kernels/soa-wf-atom/: soa_wf_atom.cpp  soa_wf_atom.h
src/kernels/types/: hip_kernel_types.h  vec3.hpp
src/memory/: device_atoms.cpp  device_atoms.h  device_atoms_aos.cpp  device_atoms_soa.cpp
